@startuml
class io.github.some_example_name.models.Player {
+ String name
+ Int gold
+ Int turn
+ Team team
+ Shop shop
+ ShopController shopController
}

class io.github.some_example_name.models.Sprite {
+ String name
+ Int attack
+ Int health
+ Int tier
+ Item? item
+ Int level
+ Int cost
+ Boolean isFrozen
+ String color
}

class io.github.some_example_name.resources.items

class io.github.some_example_name.resources.sprites

class io.github.some_example_name.models.Team {
+ MutableList<GameUnit> teams
}


class io.github.some_example_name.controller.BattleController {
+ void startBattle()
+ void attack(Sprite,Sprite)
}

class io.github.some_example_name.models.Item {
+ String name
+ Int cost
+ Boolean isFrozen
}

class io.github.some_example_name.models.Shop {
+ MutableList<GameUnit> slots
+ MutableSet<Int> frozenUnits
}

class io.github.some_example_name.models.Battle {
+ Player playerA
+ Player playerB
}

class io.github.some_example_name.controller.PlayerController {
+ void startTurn()
+ Int toggleFreeze(Int)
+ Int reroll()
+ Int buy(Int,Int)
+ Int sell(Int)
+ Int move(Int,Int)
+ Int combine(Int,Int)
+ void endTurn()
}

class io.github.some_example_name.models.Empty {
+ String name
+ Int cost
+ Boolean isFrozen
}

class io.github.some_example_name.utilities.JsonParser {
+ List<Sprite> parseSprites()
+ List<Item> parseItems()
}

interface io.github.some_example_name.interfaces.ISprite {
+ String name
+ Int attack
+ Int health
+ Int tier
+ Item? item
+ Int level
+ Int cost
+ Boolean isFrozen
}

class io.github.some_example_name.controller.ShopController {
- void parseGameUnits()
+ Int toggleFreeze(Int)
+ Int reroll()
+ Int buy(Int,Int)
- Int buySpriteResponse(GameUnit,Int)
- Int buyToEmptyResponse(GameUnit,Int)
- Int buyToOccupiedSlotResponse()
- Int buyToSameResponse(GameUnit,Int)
- Int buyItemResponse(GameUnit,Int)
- Int buyTargetedItem(GameUnit,Int)
- Int buyNonTargetedItem(GameUnit,Int)
- void generateEmptyTeamSlots()
- void generateInitialShop()
- GameUnit generateShopSlot(Int)
- Sprite generateRandomSprite()
- Item generateRandomItem()
+ void endTurn()
}

interface io.github.some_example_name.interfaces.GameUnit {
+ Boolean isFrozen
+ String name
+ Int cost
+ void toggleFreeze()
}


class io.github.some_example_name.main.Main {
}


io.github.some_example_name.interfaces.ISprite <|.. io.github.some_example_name.models.Sprite
io.github.some_example_name.interfaces.GameUnit <|.. io.github.some_example_name.models.Item
io.github.some_example_name.interfaces.GameUnit <|.. io.github.some_example_name.models.Empty
io.github.some_example_name.interfaces.GameUnit <|.. io.github.some_example_name.interfaces.ISprite
com.badlogic.gdx.ApplicationAdapter <|-- io.github.some_example_name.main.Main
@enduml
